# geswm

./: .gitattributes  .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  command.rs  lib.rs  main.rs  message.rs
crates/geswm/: Cargo.toml
crates/geswm/examples/: simple-wm.rs
crates/geswm/src/: lib.rs  log.rs  main.rs
crates/geswm/src/backend/: event.rs  geometry.rs  mod.rs  pump_status.rs  winit.rs
crates/geswm/src/client/: state.rs
crates/geswm/src/cmd/: executor.rs  mod.rs
crates/geswm/src/config/: color.rs  keyboard.rs  mod.rs
crates/geswm/src/daemon/: bind.rs  command.rs  daemon.rs  error.rs  focus.rs  keyboard.rs  mod.rs  mouse.rs
crates/geswm/src/input/: keyboard.rs  mod.rs  socket.rs
crates/geswm/src/layout/: master_stack.rs  mod.rs
crates/geswm/src/output/: mod.rs
crates/geswm/src/server/: buffer.rs  compositor.rs  mod.rs  selection.rs  shm.rs  socket.rs  state.rs  wlr_layer.rs
crates/geswm/src/surface/: geometry.rs  pipeline.rs  target.rs  transformer.rs
crates/geswm/src/surface/transformers/: border.rs  gap.rs  mod.rs
crates/wayland-app/: Cargo.toml
crates/wayland-app/src/: main.rs
examples/: running-example.rs  simple-wm.rs
src/: lib.rs  main.rs
src/backend/: winit.rs
src/client/: state.rs
src/cmd/: mod.rs
src/config/: color.rs  keyboard.rs  window_rule.rs
src/daemon/: client.rs  daemon.rs  error.rs  event.rs  executor.rs  focus.rs  keyboard.rs  layout.rs  mod.rs  mouse.rs  window.rs
src/input/: keyboard.rs  socket.rs
src/layout/: master_stack.rs  mod.rs
src/output/: mod.rs
src/server/: compositor.rs  device.rs  dnd.rs  event.rs  layer_shell.rs  mod.rs  output.rs  seat.rs  socket.rs  state.rs  wlr_layer.rs  xdg_decoration.rs  xdg_shell.rs
src/surface/: ctx.rs  geometry.rs  mod.rs  transformer.rs  window.rs
src/surface/transformers/: border.rs  gap.rs
