[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "renderer_gl",
    "wayland_frontend",
] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "server"] }
winit = { version = "0.30", features = [
    "wayland",
    "wayland-dlopen",
    "x11",
    "rwh_06",
] }
tracing = "0.1.44"
thiserror = "2.0.18"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
bitflags = "2.13.0"
tempfile = "3.20"
clap = { version = "4.6.1", features = ["derive"] }
