[workspace]
members = ["crates/*"]
resolver = "3"

[profile.dev]
debug = 1

[profile.release]
debug = 0
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
bitflags = "2.13.0"
clap = { version = "4.6.1", features = ["derive"] }
geswm = { path = "crates/geswm" }
lazy_static = "1.5.0"
signal-hook = "0.3.18"
smithay = { version = "0.7", default-features = false, features = [
    "backend_winit",
    "renderer_gl",
    "wayland_frontend",
] }
smithay-client-toolkit = "0.19"
tempfile = "3.20"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "server"] }
wayland-server = "0.31"
winit = { version = "0.30", features = [
    "wayland",
    "wayland-dlopen",
    "x11",
    "rwh_06",
] }
xdg = "3.0.0"
