[package]
name = "geswm"
description = "A wayland compositor just for me"
documentation = ""
homepage = ""
repository = "https://github.com/Kruhlmann/geswm"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[features]
default = ["winit"]
winit = ["dep:winit", "smithay/backend_winit", "smithay/renderer_gl"]

[[example]]
name = "simple-wm"
required-features = ["winit"]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
debug = 0
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
bitflags = "2.13.0"
signal-hook = "0.3.18"
smithay = { version = "0.7", default-features = false, features = [
    "wayland_frontend",
] }
thiserror = "2.0.18"
tracing = "0.1.44"
wayland-protocols = { version = "0.32", features = ["client", "server"] }
wayland-server = "0.31"
winit = { version = "0.30", features = [
    "wayland",
    "wayland-dlopen",
    "x11",
    "rwh_06",
], optional = true }
xdg = "3.0.0"
