[package]
name = "geswm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags.workspace = true
lazy_static.workspace = true
signal-hook.workspace = true
smithay.workspace = true
thiserror.workspace = true
tracing.workspace = true
wayland-protocols.workspace = true
wayland-server.workspace = true
winit.workspace = true
xdg.workspace = true
